--- a/index.html
+++ b/index.html
@@ -13,22 +13,18 @@
 
     <!-- Le styles -->
     <link href="bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-      }
-    </style>
+	<link href="styles.css" rel="stylesheet">
 
-    <!-- Le fav and touch icons -->
+    <!-- Le fav and touch icons 
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
   </head>
 
   <body>
 
-    <div class="topbar">
+    <nav class="topbar">
       <div class="fill">
         <div class="container">
           <a class="brand" href="#">Before6</a>
@@ -39,9 +35,9 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
 
-    <div class="container">
+    <section class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
@@ -70,10 +66,10 @@
       </div>
 
       <footer>
-        <p>&copy; Company 2011</p>
+        <p>&copy; Before6 2011</p>
       </footer>
 
-    </div> <!-- /container -->
+    </section> <!-- /container -->
 
   </body>
 </html>
