--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <a class="brand" href="#">Before6</a>
           <ul class="nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">Make List</a></li>
+            <li><a href="#contact">Share List</a></li>
           </ul>
         </div>
       </div>
@@ -70,6 +70,11 @@
       </footer>
 
     </section> <!-- /container -->
-
+	<section id="scripts">
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+		<script>window.jQuery||document.write('<script src="js/jquery-1.6.4.min.js"><\/script>');</script>
+		<!--[if lt IE 7 ]><script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+		    <script defer>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})});</script><![endif]-->
+	</section>
   </body>
 </html>
