--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="bootstrap.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
     <!-- Le fav and touch icons 
     <link rel="shortcut icon" href="images/favicon.ico">
