Ghosts and stuff

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
       <div class="hero-unit">
         <h1>Kick your bucket list</h1>
         <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-        <p align="left"><a class="btn primary large">Start your list</a></p>
+        <p align="right"><a class="btn primary large">Start your list</a></p>
       </div>
 
       <!-- Example row of columns -->
@@ -10,7 +10,7 @@
         <div class="span6">
           <h2>Heading</h2>
           <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>s
         </div>
         <div class="span5">
           <h2>Heading</h2>
