Moved bootstrap js into its own folder.  Deleted bootstrap demos.  Added some yet to be modified scripts.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
 
-    <nav class="topbar">
+    <nav role="navigation" class="topbar">
       <div class="fill">
         <div class="container">
           <a class="brand" href="#">Before6</a>
@@ -35,15 +35,15 @@
           </ul>
         </div>
       </div>
-    </nav>
+    </nav> <!-- /navigation -->
 
     <section class="container">
 
     </section> <!-- /container -->
     
-    <footer>
+    <footer class="container">
       <p>&copy; Before6 2011</p>
-    </footer>
+    </footer> <!-- /footer -->
     
 	<section id="scripts">
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
