--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav role="navigation" class="topbar">
       <div class="fill">
         <div class="container">
-          <a class="brand" href="#">Before6</a>
+          <a class="brand" href="/">Before6</a>
           <ul class="nav">
             <li><a href="#home.html" rel="ajax">Home</a></li>
             <li><a href="#create.html" rel="ajax">Create List</a></li>
@@ -37,11 +37,7 @@
       </div>
     </nav> <!-- /navigation -->
 
-    <section class="container">
-	
-		<div id="loading">Loading...</div>
-		
-		<article id="content"></article>
+    <section id="content" class="container">
 	
     </section> <!-- /container -->
     
