--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav role="navigation" class="topbar">
       <div class="fill">
         <div class="container">
-          <a class="brand" href="/">Before6</a>
+          <a class="brand" href="/">Yourbucketli.st</a>
           <ul class="nav">
             <li><a href="#home.html" rel="ajax">Home</a></li>
             <li><a href="#create.html" rel="ajax">Create List</a></li>
