create page updates
smoothed out create.html fixed up index for new domain

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section> <!-- /container -->
     
     <footer class="container">
-      <p>&copy; Before6 2011</p>
+      <p>&copy;yourbucketli.st  2011</p>
     </footer> <!-- /footer -->
     
 	<section id="scripts">
