--- a/create.html
+++ b/create.html
@@ -16,6 +16,7 @@
           		<div class="clearfix">
           			<div class="input">
           				<input id="input" class="createlist" placeholder="Experience Zero Gravity" type="text" size="30" name="input2">
+          			</div>
           		</div>
           		
           		<div class="clearfix">
