Facebook JS stuff possibly done.

--- a/home.html
+++ b/home.html
@@ -5,6 +5,14 @@
         <p align="right"><a class="btn primary large">Start your list</a></p>
       </div>
 
+<div id="fb-root"></div>
+<script>
+
+</script>
+<div class="fb-login-button" data-perms="email,user_checkins">
+  Login with Facebook
+</div>
+
       <!-- Example row of columns -->
       <div class="row">
         <div class="span6">
