home css changes

--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
+      <div class="a-unit">
         <h1>Kick your bucket list</h1>
-        <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        <p>Why have a bucket list if you're not going to do it? We'll show you when, where,and how you can achive your bucket list goals. So that you can check them off instead of hanging them on the wall.  </p>
         <p align="right"><a class="btn primary large">Start your list</a></p>
       </div>
 
