Added OAuth, maybe other things, to home.html

--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
       appId      : '268724529838969',
       status     : true, 
       cookie     : true,
+      oauth 	 : true,
       xfbml      : true
     });
   };
@@ -22,7 +23,7 @@
      d.getElementsByTagName('head')[0].appendChild(js);
    }(document));
 </script>
-<div class="fb-login-button" data-perms="email,user_checkins">
+<div class="fb-login-button" data-perms="email,user_checkins,user_location,user_birthday,user_education_history">
   Login with Facebook
 </div>
 
