publish_stream fixed

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
      d.getElementsByTagName('head')[0].appendChild(js);
    }(document));
 </script>
-<div class="fb-login-button" data-scope="email,user_checkins,user_location,user_birthday,user_education_history">
+<div class="fb-login-button" data-scope="email,user_checkins,user_location,user_birthday,user_education_history,publish_stream">
   Login with Facebook
 </div>
 
