--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="fill">
         <div class="container">
         <img align="left" width="80" hight="105" src="images/logoicon.png">
-          <a class="brand" href="#home">Yourbucketli.st</a>
+          <a class="brand" href="/">Yourbucketli.st</a>
           <ul class="nav">
             <li><a href="#home.html" rel="ajax">Home</a></li>
             <li><a href="#create.html" rel="ajax">Create List</a></li>
