newpages index updates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="fill">
         <div class="container">
         <img align="left" width="80" hight="105" src="images/logoicon.png">
-          <a class="brand" href="/">Yourbucketli.st</a>
+          <a class="brand" href="#home">Yourbucketli.st</a>
           <ul class="nav">
             <li><a href="#home.html" rel="ajax">Home</a></li>
             <li><a href="#create.html" rel="ajax">Create List</a></li>
@@ -46,9 +46,9 @@
     <div class="column2">
         	<p>
         	<ul type="none"> 
-    			<li>About</li> 
-    			<li>About</li> 
-    			<li>Blog</li> 
+    			<li><a href="about.html" class="">About</a></li> 
+    			<li><a href="about.html" class="">Founders</a></li> 
+    			<li><a href="about.html" class="">Blog</a></li> 
     		</ul>
     		</p>
         </div><!-- end #column1 -->
@@ -56,31 +56,31 @@
         <div class="column2">
         	<p>
         	<ul type="none"> 
-    			<li>Follow Us</li> 
-    			<li>Facebook</li> 
-    			<li>Twitter</li> 
+    			<li><a href="about.html" class="">Follow Us</a></li> 
+    			<li><a href="http://www.facebook.com/urbucketlist" class="">Facebook</a></li> 
+    			<li><a href="http://twitter.com/#!/yourbucketlst" class="">Twitter</a></li> 
     		</ul> 
     		</p>
         </div><!-- end #column2 -->
         <div class="column3">
         	<p>
         	<ul type="none"> 
-    			<li>Questions</li> 
-    			<li>FAQ</li> 
-    			<li>Contact Us</li> 
+    			<li><a href="about.html" class="">Feedback</a></li> 
+    			<li><a href="about.html" class="">FAQ</a></li> 
+    			<li><a href="about.html" class="">About</a></li> 
     		</ul>
     		</p>
         </div><!-- end #column3 -->
         <div class="column4">
         	<p>
         	<ul type="none"> 
-    			<li>Company</li> 
-    			<li>Press</li> 
-    			<li>Careers</li>
+    			<li><a href="about.html" class="">Company</a></li> 
+    			<li><a href="about.html" class="">Press</a></li> 
+    			<li><a href="about.html" class="">Careers</a></li>
     		</ul>
     		</p>
         </div><!-- end #column4 -->
-      <div float="center">
+      <div class="copyright">
       	<p>&copy;yourbucketli.st  2011</p>
       	</div>
     </footer> <!-- /footer -->
