--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <div class="column2">
         	<p>
         	<ul type="none"> 
-    			<li><a href="about.html" class="">About</a></li> 
-    			<li><a href="about.html" class="">Founders</a></li> 
-    			<li><a href="about.html" class="">Blog</a></li> 
+    			<li><a href="#about.html" class="">About</a></li> 
+    			<li><a href="#founders.html" class="">Founders</a></li> 
+    			<li><a href="#blog.html" class="">Blog</a></li> 
     		</ul>
     		</p>
         </div><!-- end #column1 -->
@@ -56,7 +56,7 @@
         <div class="column2">
         	<p>
         	<ul type="none"> 
-    			<li><a href="about.html" class="">Follow Us</a></li> 
+    			<li><a href="http://twitter.com/#!/yourbucketlst" class="">Follow Us</a></li> 
     			<li><a href="http://www.facebook.com/urbucketlist" class="">Facebook</a></li> 
     			<li><a href="http://twitter.com/#!/yourbucketlst" class="">Twitter</a></li> 
     		</ul> 
@@ -65,18 +65,18 @@
         <div class="column3">
         	<p>
         	<ul type="none"> 
-    			<li><a href="about.html" class="">Feedback</a></li> 
-    			<li><a href="about.html" class="">FAQ</a></li> 
-    			<li><a href="about.html" class="">About</a></li> 
+    			<li><a href="#Feedback.html" class="">Feedback</a></li> 
+    			<li><a href="#FAQ.html" class="">FAQ</a></li> 
+    			<li><a href="#about.html" class="">About</a></li> 
     		</ul>
     		</p>
         </div><!-- end #column3 -->
         <div class="column4">
         	<p>
         	<ul type="none"> 
-    			<li><a href="about.html" class="">Company</a></li> 
-    			<li><a href="about.html" class="">Press</a></li> 
-    			<li><a href="about.html" class="">Careers</a></li>
+    			<li><a href="#company.html" class="">Company</a></li> 
+    			<li><a href="#press.html" class="">Press</a></li> 
+    			<li><a href="#carrers.html" class="">Careers</a></li>
     		</ul>
     		</p>
         </div><!-- end #column4 -->
