link updates with ajax

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <div class="column2">
         	<p>
         	<ul type="none"> 
-    			<li><a href="#about.html" class="">About</a></li> 
-    			<li><a href="#founders.html" class="">Founders</a></li> 
-    			<li><a href="#blog.html" class="">Blog</a></li> 
+    			<li><a href="#about.html" rel="ajax" class="">About</a></li> 
+    			<li><a href="#founders.html" rel="ajax" class="">Founders</a></li> 
+    			<li><a href="#blog.html" rel="ajax" class="">Blog</a></li> 
     		</ul>
     		</p>
         </div><!-- end #column1 -->
@@ -65,18 +65,18 @@
         <div class="column3">
         	<p>
         	<ul type="none"> 
-    			<li><a href="#Feedback.html" class="">Feedback</a></li> 
-    			<li><a href="#FAQ.html" class="">FAQ</a></li> 
-    			<li><a href="#about.html" class="">About</a></li> 
+    			<li><a href="#Feedback.html" rel="ajax" class="">Feedback</a></li> 
+    			<li><a href="#FAQ.html" rel="ajax" class="">FAQ</a></li> 
+    			<li><a href="#about.html" rel="ajax" class="">About</a></li> 
     		</ul>
     		</p>
         </div><!-- end #column3 -->
         <div class="column4">
         	<p>
         	<ul type="none"> 
-    			<li><a href="#company.html" class="">Company</a></li> 
-    			<li><a href="#press.html" class="">Press</a></li> 
-    			<li><a href="#carrers.html" class="">Careers</a></li>
+    			<li><a href="#company.html" rel="ajax" class="">Company</a></li> 
+    			<li><a href="#press.html" rel="ajax" class="">Press</a></li> 
+    			<li><a href="#carrers.html" rel="ajax" class="">Careers</a></li>
     		</ul>
     		</p>
         </div><!-- end #column4 -->
