page name change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Before6 - Kick your online bucket list</title>
+    <title>Yourbucketli.st - Kick your bucket list</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
