--- a/create.html
+++ b/create.html
@@ -36,10 +36,12 @@
           				<input id="input" class="createlist" placeholder="Slay a Dragon" type="text" size="30" name="input5">
           			</div>
           		</div>
+          		
+          		<div align="center">
+                  <input id="input" class="btn large primary" type="submit" value="Submit" />
+               </div>
+          		
           	</fieldset>
           </form>
-          <div align="center">
-              <a class="btn large primary">Submit</a>
-          </div>
         </div>
       </div>
