--- a/create.html
+++ b/create.html
@@ -5,7 +5,7 @@
 
       <div class="row">
         <div class="span16">
-          <form>
+          <form method="post">
           	<fieldset>
           		<div class="clearfix">
           			<div class="input">
@@ -38,7 +38,7 @@
           		</div>
           		
           		<div align="center">
-                  <input id="input" class="btn large primary" type="submit" value="Submit" />
+                  <input id="create_submit" class="btn large primary" type="submit" value="Submit" />
                </div>
           		
           	</fieldset>
