--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <script type="text/javascript" src="form_submit.js"></script>
 
     <!-- Le fav and touch icons 
     <link rel="shortcut icon" href="images/favicon.ico">
