--- a/create.html
+++ b/create.html
@@ -5,7 +5,7 @@
 
       <div class="row">
         <div class="span16">
-          <form method="post">
+          <form action="">
           	<fieldset>
           		<div class="clearfix">
           			<div class="input">
