Changes buttons index

--- a/home.html
+++ b/home.html
@@ -2,8 +2,11 @@
       <div class="a-unit">
         <h1>Kick your bucket list</h1>
         <p>Why have a bucket list if you're not going to do it? We'll show you when, where,and how you can achive your bucket list goals. So that you can check them off instead of hanging them on the wall.  </p>
+        <div class"pull-right">
         <div class="fb-login-button btn primary large" data-scope="email,user_checkins,user_location,user_birthday,user_education_history,publish_stream">
           Login with Facebook
+        </div>
+        <span class="help-block">Create Your Bucket List!</span>
         </div>
       </div>
 
