--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Yourbucketli.st - Kick your bucket list</title>
+    <title>Before6 - Kick your online bucket list</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -28,7 +28,7 @@
       <div class="fill">
         <div class="container">
         <img align="left" width="80" hight="105" src="images/logoicon.png">
-          <a class="brand" href="/">Yourbucketli.st</a>
+          <a class="brand" href="#home">Yourbucketli.st</a>
           <ul class="nav">
             <li><a href="#home.html" rel="ajax">Home</a></li>
             <li><a href="#create.html" rel="ajax">Create List</a></li>
@@ -46,14 +46,8 @@
     <div class="column2">
         	<p>
         	<ul type="none"> 
-<<<<<<< HEAD
-    			<li><a href="#about.html" rel="ajax" class="">About</a></li> 
-    			<li><a href="#founders.html" rel="ajax" class="">Founders</a></li> 
-=======
     			<li><a href="#about.html"rel="ajax" class="">About</a></li> 
-    			<li><a href="#team.html" rel="ajax" class="">Team</a></li> 
->>>>>>> All sorts of new Goodness
-    			<li><a href="#blog.html" rel="ajax" class="">Blog</a></li> 
+    			<li><a href="http://yourbucketlistblog.tumblr.com/" class="">Blog</a></li> 
     		</ul>
     		</p>
         </div><!-- end #column1 -->
@@ -61,10 +55,6 @@
         <div class="column2">
         	<p>
         	<ul type="none"> 
-<<<<<<< HEAD
-    			<li><a href="http://twitter.com/#!/yourbucketlst" class="">Follow Us</a></li> 
-=======
->>>>>>> All sorts of new Goodness
     			<li><a href="http://www.facebook.com/urbucketlist" class="">Facebook</a></li> 
     			<li><a href="http://twitter.com/#!/yourbucketlst" class="">Twitter</a></li> 
     		</ul> 
@@ -73,28 +63,16 @@
         <div class="column3">
         	<p>
         	<ul type="none"> 
-<<<<<<< HEAD
-    			<li><a href="#Feedback.html" rel="ajax" class="">Feedback</a></li> 
-    			<li><a href="#FAQ.html" rel="ajax" class="">FAQ</a></li> 
-    			<li><a href="#about.html" rel="ajax" class="">About</a></li> 
-=======
-    			<li><a href="i#feedback.html" rel="ajax" class="">Feedback</a></li> 
-    			<li><a href="#faq.html" rel="ajax" class="">FAQ</a></li> 
+    			<li><a href="#feedback.html" rel="ajax" class="">Feedback</a></li> 
     			<li><a href="#contact.html" rel="ajax" class="">Contact</a></li> 
->>>>>>> All sorts of new Goodness
     		</ul>
     		</p>
         </div><!-- end #column3 -->
         <div class="column4">
         	<p>
         	<ul type="none"> 
-    			<li><a href="#company.html" rel="ajax" class="">Company</a></li> 
     			<li><a href="#press.html" rel="ajax" class="">Press</a></li> 
-<<<<<<< HEAD
-    			<li><a href="#carrers.html" rel="ajax" class="">Careers</a></li>
-=======
     			<li><a href="#careers.html" rel="ajax" class="">Careers</a></li>
->>>>>>> All sorts of new Goodness
     		</ul>
     		</p>
         </div><!-- end #column4 -->
@@ -109,8 +87,6 @@
 		    
 		<script defer src="js/plugins.js"></script>
 		<script defer src="js/script.js"></script>
-		
-		<script type="text/javascript" src="form_submit.js"></script>
 		
 		<div id="fb-root"></div>
 		<script>
