--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
   </head>
 
   <body>
+  
+   <div id="fb-root"></div>
+	<script>
+	  window.fbAsyncInit = function() {
+	    FB.init({
+	      appId      : '268724529838969',
+	      status     : true, 
+	      cookie     : true,
+	      oauth 	 : true,
+	      xfbml      : true
+	    });
+	  };
+	(function(d){
+     var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
+     js = d.createElement('script'); js.id = id; js.async = true;
+     js.src = "//connect.facebook.net/en_US/all.js";
+     d.getElementsByTagName('head')[0].appendChild(js);
+   }(document));
+	</script>
 
     <nav role="navigation" class="topbar">
       <div class="fill">
@@ -93,26 +112,6 @@
 		<script defer src="js/script.js"></script>
 		
 		<script type="text/javascript" src="form_submit.js"></script>
-		
-		<div id="fb-root"></div>
-		<script>
-		  window.fbAsyncInit = function() {
-		    FB.init({
-		      appId      : '268724529838969',
-		      status     : true, 
-		      cookie     : true,
-		      oauth 	 : true,
-		      xfbml      : true
-		    });
-		  };
-		(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) {return;}
-		  js = d.createElement(s); js.id = id;
-		  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=268724529838969";
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-		</script>
 		
 		<!-- Change UA-XXXXX-X to be your site's ID 
 		<script>
