--- a/index.html
+++ b/index.html
@@ -128,12 +128,13 @@
     <nav role="navigation" class="topbar">
       <div class="fill">
         <div class="container">
-        <img align="left" width="80" hight="105" src="images/logoicon.png">
+          <img align="left" width="80" hight="105" src="images/logoicon.png">
           <a class="brand" href="index.html">Your Bucket List</a>
           <ul class="nav">
             
                         
           </ul>
+          <div class="pull-right btn info">BETA!</div>
         </div>
       </div>
     </nav> <!-- /navigation -->
