--- a/bottomlinks/press.html
+++ b/bottomlinks/press.html
@@ -1,3 +1,4 @@
+<section id="content" class="container">
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="g-unit">
         <h2>Who's been talking bout us? Oh stop it, we're all embarrased.</h2>
@@ -11,3 +12,4 @@
       </div>
       
       </div>
+</section>
