--- a/bottomlinks/contact.html
+++ b/bottomlinks/contact.html
@@ -1,3 +1,4 @@
+<section id="content" class="container">
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="g-unit">
         <h2>We love you all, talk to us!</h2>
@@ -6,3 +7,4 @@
       <div>
       <iframe src="https://docs.google.com/a/yourbucketli.st/spreadsheet/embeddedform?formkey=dENuaGduNTMyUTcxb1M0YWtydUhvTGc6MQ" width="760" height="625" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       </div>
+</section>
